# hed-matlab

./: .codespellrc  .coveragerc  .gitattributes  .gitignore  .lycheeignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  build-docs.bat  lychee.toml  pyproject.toml  readthedocs.yml  requirements-dev.txt  serve-sphinx.bat
.github/workflows/: black.yaml  ci.yaml  codespell.yaml  codespell.yml  deploy-docs.yaml  deploy-docs.yml  links.yaml  links.yml  mdformat.yaml  ruff.yaml  typos.yaml
data/other_data/: summarize_hed_tags_rmdl.json
docs/: api2.rst  conf.py  development.md  index.rst  overview.md  patch_matlabdomain.py  requirements.txt  user_guide.md
docs/source/: api2.rst  conf.py  index.rst  introduction.md  introduction.rst  user_guide.md
hedmat/: EEGevents.mat  README.md  getHEDStrings1.m  setupPython.m  temp.m  test1.m  test2.m  test3.m
hedmat/data_cleaning/: eventsToTsv.m
hedmat/demos/: runTagServicesDemo.m
hedmat/hed_services/: HedService.m  HedTools.m  HedToolsBase.m  HedToolsPython.m  HedToolsService.m  getHedTools.m  validate_hedtags_web.m
hedmat/hed_tools/: HedToolsPython.m  HedToolsService.m
hedmat/hed_wrappers/: Copy_of_validateOldString.m  convertTable.m  events2String.m  getEEGEvents.m  getEEGEventsOld.m  getEventTable.m  getEvents.m  getFactors.m  getHEDFactor.m  getHedSchema.m  getHedStringObjs.m  getRowString.m  getSidecar.m  getTabularInput.m  get_hed_factor.m  get_schema_obj.m  get_sidecar_obj.m  get_string_objs.m  get_tabular_obj.m  my4.tsv  rectifyEvents.m  runBidsValidation.m  validateEvents.m  validateHedString.m  validateSidecar.m  validateString.m  validate_bids.m  validate_events.m  validate_hed_string.m  validate_hedtags.m  validate_sidecar.m
hedmat/hedtools/: HedTools.m  HedToolsPython.m  HedToolsService.m  getHedTools.m
hedmat/hedtools_wrappers/: remodelExample1.m
hedmat/remodeling/: README.md  remodel.m  runRemodel.m
hedmat/remodeling_demos/: README.md  remodelBackup.m  remodelRestore.m  runRemodelDemos.m
hedmat/utilities/: Copy_of_getEventTable.m  events2string.m  filterDirectories.m  filterFiles.m  getEventTableOld.m  getFileList.m  rectify_events.m  separateFiles.m  str2lines.m
hedmat/web_services/: demoEventRemodelingServices.m  demoEventSearchServices.m  demoEventServices.m  demoLibraryServices.m  demoSidecarServices.m  demoSpreadsheetServices.m  demoStringServices.m  getDemoData.m  getTestData.m  runAllDemos.m  runAllTests.m  runAssembleExamples.m  runDemo.m
hedmat/web_services_demos/: README.md  demoEventRemodelingServices.m  demoEventSearchServices.m  demoEventServices.m  demoGetServices.m  demoSidecarServices.m  demoSpreadsheetServices.m  demoStringServices.m  getDemoData.m  getRequestTemplate.m  getSessionInfo.m  runAllDemos.m  runDemo.m
tests/: runAllTests.m
tests/test_hed_tools/: TestHedToolsCompare.m  TestHedToolsPython.m  TestHedToolsService.m
tests/test_hed_web/: Copy_of_TestHedService.m  TestHedToolsPython.m  TestHedToolsService.m
tests/test_hed_wrappers/: TestEvents2Struct.m  TestGetEEGEvents.m  TestGetEventTable.m  TestGetEvents.m  TestGetHedFactor.m  TestGetHedSchema.m  TestGetHedStringObjs.m  TestGetSchemaObj.m  TestGetSidecar.m  TestGetSidecarObj.m  TestGetStringObjs.m  TestGetStringObjsOld.m  TestGetTabularInput.m  TestGetTabularObj.m  TestGetTabularObjOld.m  TestRectifyEvents.m  TestValidateBids.m  TestValidateEvents.m  TestValidateEventsOld.m  (+4 more)
(+15 files in other folders)
